[gd_scene load_steps=9 format=3 uid="uid://hi338ppglm7m"]

[ext_resource type="Script" uid="uid://cds5tixa7sowc" path="res://menus/pause/PauseMenuController.gd" id="1_36y7k"]
[ext_resource type="Theme" uid="uid://cdta86b2s4dni" path="res://assets/themes/global_theme.tres" id="1_ucdrm"]
[ext_resource type="Shader" uid="uid://dqf3tvysjbhu7" path="res://assets/shaders/blur.gdshader" id="2_wxfa8"]
[ext_resource type="Shader" uid="uid://b0n1i03vxwmb7" path="res://assets/shaders/darkenedblur.gdshader" id="3_mwcbr"]
[ext_resource type="Texture2D" uid="uid://deyqhxsmrfbmn" path="res://assets/ui/grid_background.png" id="4_w0vb2"]
[ext_resource type="Script" uid="uid://cdy33a40hwx57" path="res://common/UI/MainMenuButton.gd" id="5_mwcbr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ij46g"]
resource_local_to_scene = true
shader = ExtResource("3_mwcbr")
shader_parameter/lod = 2.5
shader_parameter/mix_percentage = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w0vb2"]
shader = ExtResource("2_wxfa8")
shader_parameter/amount = 0.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ucdrm")
script = ExtResource("1_36y7k")

[node name="BackgroundBlur" type="TextureRect" parent="."]
self_modulate = Color(0.505882, 0.630764, 0.792157, 1)
material = SubResource("ShaderMaterial_ij46g")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_w0vb2")
stretch_mode = 5

[node name="1440pReferenceRect" type="ReferenceRect" parent="."]
visible = false
custom_minimum_size = Vector2(1440, 1080)
layout_mode = 0
offset_left = 270.0
offset_right = 1710.0
offset_bottom = 1080.0
pivot_offset = Vector2(720, 540)
border_width = 2.0

[node name="InnerControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = 24.0
offset_right = -90.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Heading" type="PanelContainer" parent="InnerControl"]
material = SubResource("ShaderMaterial_w0vb2")
layout_mode = 1
offset_left = -90.0
offset_right = 240.0
offset_bottom = 53.0
theme_type_variation = &"HeadingPanel"

[node name="HeadingLabel" type="Label" parent="InnerControl/Heading"]
layout_mode = 2
theme = ExtResource("1_ucdrm")
theme_type_variation = &"HeadingLabel"
text = "Paused"
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="InnerControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -152.0
offset_right = 230.0
offset_bottom = 152.0
grow_vertical = 2
theme_override_constants/separation = 24

[node name="ResumeButton" type="Button" parent="InnerControl/Buttons"]
layout_mode = 2
theme_type_variation = &"TabButtonSelected"
text = "RESUME GAME"
alignment = 0
script = ExtResource("5_mwcbr")

[node name="SettingsButton" type="Button" parent="InnerControl/Buttons"]
layout_mode = 2
theme_type_variation = &"TabButtonNormal"
text = "OPTIONS"
alignment = 0
script = ExtResource("5_mwcbr")

[node name="NewGameButton" type="Button" parent="InnerControl/Buttons"]
layout_mode = 2
theme_type_variation = &"TabButtonNormal"
text = "NEW GAME"
alignment = 0
script = ExtResource("5_mwcbr")

[node name="MainMenuButton" type="Button" parent="InnerControl/Buttons"]
layout_mode = 2
theme_type_variation = &"TabButtonNormal"
text = "MAIN MENU"
alignment = 0
script = ExtResource("5_mwcbr")

[connection signal="pressed" from="InnerControl/Buttons/ResumeButton" to="." method="on_resume_game_clicked"]
[connection signal="pressed" from="InnerControl/Buttons/SettingsButton" to="." method="on_settings_clicked"]
[connection signal="pressed" from="InnerControl/Buttons/NewGameButton" to="." method="on_new_game_clicked"]
[connection signal="pressed" from="InnerControl/Buttons/MainMenuButton" to="." method="on_main_menu_clicked"]
